tests/deriving/should_fail/drvfail-functor1.stderr
drvfail-functor1.hs:7:14: error: [GHC-86639]
    • Can't make a derived instance of ‘Functor List’:
        You need DeriveFunctor to derive an instance for this class
    • In the data type declaration for ‘List’

